added auth and cors to files service
