# files/docs/openapi.yml
@@ -2,10 +2,17 @@ openapi: 3.0.0
 info:
   title: File Service API
   version: 1.0.0
+
+servers:
+  - url: http://files.localhost/
+    description: Локальный сервер для разработки
+
 paths:
   /upload:
     post:
       summary: Upload a file
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -29,6 +36,8 @@ paths:
   /download/{id}:
     get:
       summary: Download a files
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -47,6 +56,8 @@ paths:
   /delete/{id}:
     delete:
       summary: Remove a file
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -67,6 +78,8 @@ paths:
   /exists/{id}:
     get:
       summary: Check if a file exists
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
